# CSharp-Marshalling

./: .gitignore  README.md
master-project/: CMakeLists.txt
master-project/c#-code/: main.cs
master-project/master-project/: CMakeLists.txt
master-project/master-project/include/: main.hpp
master-project/master-project/source/: main.cpp
master-project/sub-project/: CMakeLists.txt
master-project/sub-project/include/: dll.hpp
master-project/sub-project/source/: dll.cpp
